--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "mkg's Infrastructure Template/Kit",
   "main": "index.js",
+  "bin": {
+    "infra": "bin.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,5 +19,9 @@
     "terraform"
   ],
   "author": "Maciej Krüger <mkg20001@gmail.com>",
-  "license": "MPL-2.0"
+  "license": "MPL-2.0",
+  "dependencies": {
+    "is-path-inside": "^2.0.0",
+    "yargs": "^12.0.1"
+  }
 }
