--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "author": "Maciej Krüger <mkg20001@gmail.com>",
   "license": "MPL-2.0",
   "dependencies": {
+    "glob": "^7.1.2",
     "is-path-inside": "^2.0.0",
+    "mkdirp": "^0.5.1",
     "yargs": "^12.0.1"
   }
 }
