--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mkg-infra",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "mkg's Infrastructure Template/Kit",
   "main": "index.js",
   "bin": {
@@ -25,5 +25,14 @@
     "is-path-inside": "^2.0.0",
     "mkdirp": "^0.5.1",
     "yargs": "^12.0.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mkg20001/mkg-infra.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mkg20001/mkg-infra/issues"
+  },
+  "homepage": "https://github.com/mkg20001/mkg-infra#readme"
 }
