--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "glob": "^7.1.2",
     "is-path-inside": "^2.0.0",
     "mkdirp": "^0.5.1",
+    "mkg-deploy-tool": "github:mkg20001/mkg-deploy-tool",
     "simple-tf-dns": "0.0.2",
     "yargs": "^12.0.1"
   },
