feat: Assign priorities and re-order

--- a/deploy.d/10-snoopy.yaml
+++ b/deploy.d/10-snoopy.yaml
@@ -1,8 +1,11 @@
 affects:
   - '*'
+priority: 10
 modules:
   pkg:
     - snoopy
+  link:
+    etc/snoopy.ini: /etc/snoopy.ini
 lifecycle:
   install.pre:
     - debconf-set-selections <<< "snoopy snoopy/install-ld-preload boolean true"
