--- a/deploy.d/20-node.yaml
+++ b/deploy.d/20-node.yaml
@@ -1,5 +1,6 @@
 affects:
   - '*'
+priority: 20
 lifecycle:
   install.pre: |
     wget --quiet -O - https://deb.nodesource.com/gpgkey/nodesource.gpg.key | apt-key add -
