--- a/deploy.d/20-node.yaml
+++ b/deploy.d/20-node.yaml
@@ -1,6 +1,9 @@
 affects:
   - '*'
 priority: 20
+modules:
+  pkg:
+    - nodejs
 lifecycle:
   install.pre: |
     wget --quiet -O - https://deb.nodesource.com/gpgkey/nodesource.gpg.key | apt-key add -
@@ -9,9 +12,8 @@ lifecycle:
     echo "deb https://deb.nodesource.com/$VERSION $DISTRO main" | sudo tee /etc/apt/sources.list.d/nodesource.list
     echo "deb-src https://deb.nodesource.com/$VERSION $DISTRO main" | sudo tee -a /etc/apt/sources.list.d/nodesource.list
     sudo apt-get update
-    sudo apt-get install nodejs -y
   cron.pre: |
-    for cache in //{home/*,root}/.{npm,node-gyp}; do
+    for cache in /{home/*,root}/.{npm,node-gyp}; do
       if [ -d "$cache" ]; then
         echo "Removing $cache..."
         rm -rf "$cache"
