feat: Move ssl into nginx yaml

--- a/deploy.d/nginx.yaml
+++ b/deploy.d/nginx.yaml
@@ -11,6 +11,7 @@ modules:
     nginx/sites: /etc/nginx/sites
     nginx/html: /usr/share/nginx/html
     nginx/nginx.conf: /etc/nginx/nginx.conf
+    ssl/acme: /etc/letsencrypt
 lifecycle:
   post.post:
     - service nginx reload
