feat: Don't overwrite non-symlinks - Update template

--- a/deploy.yaml
+++ b/deploy.yaml
@@ -3,5 +3,7 @@ groups:
     - some-host
 config:
   dataDirectory: '/etc/enter-script-state-location-here'
-  authUsers:
-    username: ['gh:githubName', 'lp:launchpadName']
+  auth:
+    username:
+      keys: ['gh:githubName', 'lp:launchpadName']
+      groups: ['sudo']
