--- a/deploy.d/shared/20-docker-ce.yaml
+++ b/deploy.d/shared/20-docker-ce.yaml
@@ -6,7 +6,7 @@ modules:
   pkg:
     - docker-ce
 lifecycle:
-  install.pre:
+  install.pre: |
     curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
     sudo add-apt-repository \
        "deb [arch=amd64] https://download.docker.com/linux/ubuntu \
