--- a/deploy.d/shared/nginx.yaml
+++ b/deploy.d/shared/nginx.yaml
@@ -13,5 +13,5 @@ modules:
     nginx/nginx.conf: /etc/nginx/nginx.conf
     ssl/acme: /etc/letsencrypt
 lifecycle:
-  post.post:
+  post.post: |
     - service nginx reload
