--- a/deploy.d/shared/10-snoopy.yaml
+++ b/deploy.d/shared/10-snoopy.yaml
@@ -7,5 +7,4 @@ modules:
   link:
     etc/snoopy.ini: /etc/snoopy.ini
 lifecycle:
-  install.pre: |
-    - debconf-set-selections <<< "snoopy snoopy/install-ld-preload boolean true"
+  install.pre: debconf-set-selections <<< "snoopy snoopy/install-ld-preload boolean true"
