--- a/deploy.d/shared/nginx.yaml
+++ b/deploy.d/shared/nginx.yaml
@@ -13,5 +13,4 @@ modules:
     nginx/nginx.conf: /etc/nginx/nginx.conf
     ssl/acme: /etc/letsencrypt
 lifecycle:
-  post.post: |
-    - service nginx reload
+  post.post: service nginx reload
