feat: Add stub status for netdata

--- a/nginx/sites/00-default.conf
+++ b/nginx/sites/00-default.conf
@@ -3,6 +3,13 @@ server {
   listen 80 default_server;
   listen [::]:80 default_server;
 
+  location /stub_status {
+    stub_status;
+    allow 127.0.0.1;
+    allow ::1;
+    deny all;
+  }
+
   location / {
     # Redirect all HTTP requests to HTTPS with a 301 Moved Permanently response.
     return 301 https://$host$request_uri;
