--- a/nginx/sites/00-default.conf
+++ b/nginx/sites/00-default.conf
@@ -3,19 +3,14 @@ server {
   listen 80 default_server;
   listen [::]:80 default_server;
 
-  location /stub_status {
-    stub_status;
-    allow 127.0.0.1;
-    allow ::1;
-    deny all;
-  }
+  include _/silent-403.conf;
+  include _/stub-status.conf;
+  include _/letsencrypt.conf;
 
   location / {
     # Redirect all HTTP requests to HTTPS with a 301 Moved Permanently response.
     return 301 https://$host$request_uri;
   }
-
-  include _/letsencrypt.conf;
 }
 
 server {
