--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -41,8 +41,6 @@ http {
 	' $status $body_bytes_sent'
 	' $server_name "$http_host" "$http_referer"'
 	' "$http_user_agent"';
-	access_log /var/log/nginx/access.log main;
-	error_log /var/log/nginx/error.log;
 
 	##
 	# Gzip Settings
@@ -97,7 +95,12 @@ http {
 	# Virtual Host Configs
 	##
 
+	set $logging 1;
+
 	client_max_body_size 1024M;
 	include /etc/nginx/conf.d/*.conf;
 	include /etc/nginx/sites/*;
+
+	access_log /var/log/nginx/access.log main if=$logging;
+	error_log /var/log/nginx/error.log;
 }
