--- a/nginx/_/ignore-uptimerobot.conf
+++ b/nginx/_/ignore-uptimerobot.conf
@@ -1,15 +1,15 @@
 set $utr_test '';
 
 if ( $utr_ua = 1 ) {
-  set $logtest "${logtest}A";
+  set $utr_test "${utr_test}A";
 }
 
 if ( $utr_me = 1 ) {
-  set $logtest "${logtest}B";
+  set $utr_test "${utr_test}B";
 }
 
 if ( $utr_st = 1 ) {
-  set $logtest "${logtest}C";
+  set $utr_test "${utr_test}C";
 }
 
 if ( $utr_test = "ABC" ) {
