--- a/nginx/_/ignore-uptimerobot.conf
+++ b/nginx/_/ignore-uptimerobot.conf
@@ -1,17 +1,3 @@
-set $utr_test '';
-
-if ( $utr_ua = 1 ) {
-  set $utr_test "${utr_test}A";
-}
-
-if ( $utr_me = 1 ) {
-  set $utr_test "${utr_test}B";
-}
-
-if ( $utr_st = 1 ) {
-  set $utr_test "${utr_test}C";
-}
-
-if ( $utr_test = "ABC" ) {
+if ( "$utr_ua$utr_me$utr_st" == "111" ) {
   set $logging 0;
 }
