--- a/nginx/_/ignore-uptimerobot.conf
+++ b/nginx/_/ignore-uptimerobot.conf
@@ -1,3 +1,4 @@
-if ( "${utr_ua}${utr_me}${utr_st}" = "111" ) {
+set $utr "${utr_ua}${utr_me}${utr_st}";
+if ( $utr = "111" ) {
   set $logging 0;
 }
