--- a/deploy.d/shared/20-cjdns.yaml
+++ b/deploy.d/shared/20-cjdns.yaml
@@ -28,7 +28,7 @@ lifecycle:
       [ ! -e /etc/cjdroute.conf ] && sudo bash -c '(umask 077 && ./cjdroute --genconf > /etc/cjdroute.conf)'
 
       port=$(sudo cat /etc/cjdroute.conf | grep "bind" | grep "0.0.0.0" | grep "[0-9][0-9][0-9]*" -o)
-      ufw allow "$port/udp"
+      ufw allow "$port/udp" comment CJDNS
 
       cp contrib/systemd/cjdns.service /etc/systemd/system/
       cp contrib/systemd/cjdns-resume.service /etc/systemd/system/
