Fix hash bucket

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,6 +21,7 @@ http {
 	# server_tokens off;
 
 	server_names_hash_bucket_size 64;
+	proxy_headers_hash_bucket_size 64;
 	# server_name_in_redirect off;
 
 	include /etc/nginx/mime.types;
