--- a/nginx/_/forward.conf
+++ b/nginx/_/forward.conf
@@ -1,3 +1,3 @@
-proxy_set_header Forwarded $proxy_add_forwarded;
+# proxy_set_header Forwarded $proxy_add_forwarded;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
