feat: addon.d config

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -103,3 +103,5 @@ http {
 	access_log /var/log/nginx/access.log main if=$logging;
 	error_log /var/log/nginx/error.log;
 }
+
+include /etc/nginx/addon.d/*.conf;
