--- a/nginx/_/allow-cf.conf
+++ b/nginx/_/allow-cf.conf
@@ -1,6 +1,6 @@
 # https://www.cloudflare.com/ips
 
-## v4
+# IPv4
 allow 103.21.244.0/22;
 allow 103.22.200.0/22;
 allow 103.31.4.0/22;
@@ -16,7 +16,7 @@ allow 190.93.240.0/20;
 allow 197.234.240.0/22;
 allow 198.41.128.0/17;
 
-## v6
+# IPv6
 allow 2400:cb00::/32;
 allow 2405:b500::/32;
 allow 2606:4700::/32;
@@ -24,4 +24,4 @@ allow 2803:f800::/32;
 allow 2c0f:f248::/32;
 allow 2a06:98c0::/29;
 
-# Generated at Fri Jan  4 18:48:40 CET 2019
+# Generated at Fri Jan  4 18:58:06 CET 2019
