--- a/nginx/_/forward.conf
+++ b/nginx/_/forward.conf
@@ -1,3 +1,5 @@
+proxy_ssl_verify off;
+proxy_set_header Host            $host;
+proxy_set_header X-Forwarded-For $remote_addr;
 # proxy_set_header Forwarded $proxy_add_forwarded;
-proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
+proxy_pass_request_headers on;
