--- a/nginx/_/dnslink.conf
+++ b/nginx/_/dnslink.conf
@@ -4,6 +4,7 @@ proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $remote_addr;
 proxy_intercept_errors on;
 error_page 404 = /404.html;
-proxy_set_header Host $host;
+# this is handled by _/forward.conf now
+# proxy_set_header Host $host;
 expires $expires;
 proxy_pass http://localhost:8080;
