fix: stream log

--- a/nginx/addon-stream/addon.d/00-stream.conf
+++ b/nginx/addon-stream/addon.d/00-stream.conf
@@ -2,7 +2,7 @@ load_module /usr/lib/nginx/modules/ngx_stream_module.so;
 
 stream {
 
-  log_format sbasic '$remote_addr:$remote_port -> $server_addr:$server_port sni="$ssl_preread_server_name" -> "$end_tcp_name" [$time_local] '
+  log_format sbasic '$remote_addr:$remote_port -> $server_addr:$server_port sn="$ssl_preread_server_name" [$time_local] '
                  '$protocol $status $bytes_sent $bytes_received '
                  '$session_time';
 
