--- a/deploy.d/shared/20-cjdns.yaml
+++ b/deploy.d/shared/20-cjdns.yaml
@@ -2,7 +2,10 @@ affects:
   - '*'
   - '!$nocjdns'
 priority: 20
-version: v20.2
+version: v21.1
+modules:
+  pkg:
+    - python2
 lifecycle:
   pre.pre: |
     CJD_VER="$SCRIPT_VERSION"
