feat: mark osconf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,8 +1,10 @@
 include /etc/nginx/addon.d/*.conf;
 
+# osconf
 user www-data;
 worker_processes auto;
 pid /run/nginx.pid;
+# /osconf
 
 events {
 	worker_connections 1024;
