--- a/deploy.d/shared/20-cjdns.yaml
+++ b/deploy.d/shared/20-cjdns.yaml
@@ -36,5 +36,5 @@ lifecycle:
       systemctl enable cjdns
       systemctl restart cjdns
     }
-  install.pre: cjdMain
+  install.post: cjdMain
   upgrade.pre: cjdMain
