--- a/deploy.d/shared/19-node.yaml
+++ b/deploy.d/shared/19-node.yaml
@@ -5,14 +5,20 @@ priority: 19
 modules:
   pkg:
     - nodejs
+version: 14.x
 lifecycle:
   install.pre: |
     wget --quiet -O - https://deb.nodesource.com/gpgkey/nodesource.gpg.key | apt-key add -
-    VERSION=node_14.x
+    VERSION=node_$SCRIPT_VERSION
     DISTRO="$(lsb_release -s -c)"
     echo "deb https://deb.nodesource.com/$VERSION $DISTRO main" | sudo tee /etc/apt/sources.list.d/nodesource.list
     echo "deb-src https://deb.nodesource.com/$VERSION $DISTRO main" | sudo tee -a /etc/apt/sources.list.d/nodesource.list
     sudo apt-get update
+  upgrade.pre: |
+    VERSION=node_$SCRIPT_VERSION
+    DISTRO="$(lsb_release -s -c)"
+    echo "deb https://deb.nodesource.com/$VERSION $DISTRO main" | sudo tee /etc/apt/sources.list.d/nodesource.list
+    echo "deb-src https://deb.nodesource.com/$VERSION $DISTRO main" | sudo tee -a /etc/apt/sources.list.d/nodesource.list
   cron.pre: |
     for cache in /{home/*,root}/.{npm,node-gyp}; do
       if [ -d "$cache" ]; then
